Set to not configure to store any device details on Redis by default because the value should be configured by users